# serializer version: 1
# name: test_device_config
  dict({
    'commands': list([
      dict({
        'error_code': None,
        'id': '14939275-fdc3-4aaf-85be-1a1a7d418188',
        'status': 'Success',
      }),
    ]),
    'config': dict({
      'CMBackFlush': dict({
        'last_cleaning_start_time': None,
        'status': 'Off',
      }),
      'CMCoffeeBoiler': dict({
        'enabled': True,
        'enabled_supported': False,
        'ready_start_time': None,
        'status': 'StandBy',
        'target_temperature': 94.0,
        'target_temperature_max': 100,
        'target_temperature_min': 80,
        'target_temperature_step': 0.1,
      }),
      'CMMachineStatus': dict({
        'available_modes': list([
          'BrewingMode',
          'StandBy',
        ]),
        'brewing_start_time': None,
        'mode': 'StandBy',
        'next_status': dict({
          'start_time': '2025-03-20T17:07:07.722000+00:00',
          'status': 'StandBy',
        }),
        'status': 'StandBy',
      }),
      'CMPreBrewing': dict({
        'available_modes': list([
          'PreBrewing',
          'PreInfusion',
          'Disabled',
        ]),
        'dose_index_supported': False,
        'mode': 'PreInfusion',
        'times': dict({
          'pre_brewing': list([
            dict({
              'dose_index': 'ByGroup',
              'seconds': dict({
                'In': 5.0,
                'Out': 5.0,
              }),
              'seconds_max': dict({
                'In': 9.0,
                'Out': 9.0,
              }),
              'seconds_min': dict({
                'In': 1.0,
                'Out': 1.0,
              }),
              'seconds_step': dict({
                'In': 0.1,
                'Out': 0.1,
              }),
            }),
          ]),
          'pre_infusion': list([
            dict({
              'dose_index': 'ByGroup',
              'seconds': dict({
                'In': 0.0,
                'Out': 4.0,
              }),
              'seconds_max': dict({
                'In': 25.0,
                'Out': 25.0,
              }),
              'seconds_min': dict({
                'In': 1.0,
                'Out': 1.0,
              }),
              'seconds_step': dict({
                'In': 0.1,
                'Out': 0.1,
              }),
            }),
          ]),
        }),
      }),
      'CMPreExtraction': dict({
        'available_modes': list([
          'PreBrewing',
          'PreInfusion',
          'Disabled',
        ]),
        'mode': 'PreInfusion',
        'times': dict({
          'time_in': dict({
            'seconds': 0.0,
            'seconds_max': dict({
              'pre_brewing': 9.0,
              'pre_infusion': 9.0,
            }),
            'seconds_min': dict({
              'pre_brewing': 2.0,
              'pre_infusion': 2.0,
            }),
            'seconds_step': dict({
              'pre_brewing': 0.1,
              'pre_infusion': 0.1,
            }),
          }),
          'time_out': dict({
            'seconds': 4.0,
            'seconds_max': dict({
              'pre_brewing': 9.0,
              'pre_infusion': 25.0,
            }),
            'seconds_min': dict({
              'pre_brewing': 1.0,
              'pre_infusion': 1.0,
            }),
            'seconds_step': dict({
              'pre_brewing': 0.1,
              'pre_infusion': 0.1,
            }),
          }),
        }),
      }),
      'CMSteamBoilerLevel': dict({
        'enabled': True,
        'enabled_supported': True,
        'ready_start_time': None,
        'status': 'StandBy',
        'target_level': 'Level3',
        'target_level_supported': True,
      }),
    }),
    'connected': True,
    'connection_date': 1742439620235,
    'removed_widgets': list([
      dict({
        'code': 'CMMachineGroupStatus',
        'index': 1,
      }),
      dict({
        'code': 'CMSteamBoilerTemperature',
        'index': 1,
      }),
      dict({
        'code': 'CMGroupDoses',
        'index': 1,
      }),
      dict({
        'code': 'CMPreInfusionEnable',
        'index': 1,
      }),
      dict({
        'code': 'CMPreInfusion',
        'index': 1,
      }),
      dict({
        'code': 'CMBrewByWeightDoses',
        'index': 1,
      }),
      dict({
        'code': 'CMCupWarmer',
        'index': 1,
      }),
      dict({
        'code': 'CMHotWaterDose',
        'index': 1,
      }),
      dict({
        'code': 'CMAutoFlush',
        'index': 1,
      }),
      dict({
        'code': 'CMRinseFlush',
        'index': 1,
      }),
      dict({
        'code': 'CMSteamFlush',
        'index': 1,
      }),
      dict({
        'code': 'CMNoWater',
        'index': 1,
      }),
      dict({
        'code': 'GMachineStatus',
        'index': 1,
      }),
      dict({
        'code': 'GDoses',
        'index': 1,
      }),
      dict({
        'code': 'GSingleDoseMode',
        'index': 1,
      }),
      dict({
        'code': 'GBaristaLight',
        'index': 1,
      }),
      dict({
        'code': 'GHopperOpened',
        'index': 1,
      }),
      dict({
        'code': 'GMirrorDoses',
        'index': 1,
      }),
      dict({
        'code': 'GMoreDose',
        'index': 1,
      }),
      dict({
        'code': 'GGrindWith',
        'index': 1,
      }),
    ]),
    'uuid': '227e486d-583d-4e69-8113-2e89ac0bce53',
    'widgets': list([
      dict({
        'code': 'CMMachineStatus',
        'index': 1,
        'output': dict({
          'available_modes': list([
            'BrewingMode',
            'StandBy',
          ]),
          'brewing_start_time': None,
          'mode': 'StandBy',
          'next_status': dict({
            'start_time': '2025-03-20T17:07:07.722000+00:00',
            'status': 'StandBy',
          }),
          'status': 'StandBy',
        }),
      }),
      dict({
        'code': 'CMCoffeeBoiler',
        'index': 1,
        'output': dict({
          'enabled': True,
          'enabled_supported': False,
          'ready_start_time': None,
          'status': 'StandBy',
          'target_temperature': 94.0,
          'target_temperature_max': 100,
          'target_temperature_min': 80,
          'target_temperature_step': 0.1,
        }),
      }),
      dict({
        'code': 'CMSteamBoilerLevel',
        'index': 1,
        'output': dict({
          'enabled': True,
          'enabled_supported': True,
          'ready_start_time': None,
          'status': 'StandBy',
          'target_level': 'Level3',
          'target_level_supported': True,
        }),
      }),
      dict({
        'code': 'CMPreExtraction',
        'index': 1,
        'output': dict({
          'available_modes': list([
            'PreBrewing',
            'PreInfusion',
            'Disabled',
          ]),
          'mode': 'PreInfusion',
          'times': dict({
            'time_in': dict({
              'seconds': 0.0,
              'seconds_max': dict({
                'pre_brewing': 9.0,
                'pre_infusion': 9.0,
              }),
              'seconds_min': dict({
                'pre_brewing': 2.0,
                'pre_infusion': 2.0,
              }),
              'seconds_step': dict({
                'pre_brewing': 0.1,
                'pre_infusion': 0.1,
              }),
            }),
            'time_out': dict({
              'seconds': 4.0,
              'seconds_max': dict({
                'pre_brewing': 9.0,
                'pre_infusion': 25.0,
              }),
              'seconds_min': dict({
                'pre_brewing': 1.0,
                'pre_infusion': 1.0,
              }),
              'seconds_step': dict({
                'pre_brewing': 0.1,
                'pre_infusion': 0.1,
              }),
            }),
          }),
        }),
      }),
      dict({
        'code': 'CMPreBrewing',
        'index': 1,
        'output': dict({
          'available_modes': list([
            'PreBrewing',
            'PreInfusion',
            'Disabled',
          ]),
          'dose_index_supported': False,
          'mode': 'PreInfusion',
          'times': dict({
            'pre_brewing': list([
              dict({
                'dose_index': 'ByGroup',
                'seconds': dict({
                  'In': 5.0,
                  'Out': 5.0,
                }),
                'seconds_max': dict({
                  'In': 9.0,
                  'Out': 9.0,
                }),
                'seconds_min': dict({
                  'In': 1.0,
                  'Out': 1.0,
                }),
                'seconds_step': dict({
                  'In': 0.1,
                  'Out': 0.1,
                }),
              }),
            ]),
            'pre_infusion': list([
              dict({
                'dose_index': 'ByGroup',
                'seconds': dict({
                  'In': 0.0,
                  'Out': 4.0,
                }),
                'seconds_max': dict({
                  'In': 25.0,
                  'Out': 25.0,
                }),
                'seconds_min': dict({
                  'In': 1.0,
                  'Out': 1.0,
                }),
                'seconds_step': dict({
                  'In': 0.1,
                  'Out': 0.1,
                }),
              }),
            ]),
          }),
        }),
      }),
      dict({
        'code': 'CMBackFlush',
        'index': 1,
        'output': dict({
          'last_cleaning_start_time': None,
          'status': 'Off',
        }),
      }),
    ]),
  })
# ---
# name: test_scheduling_config
  dict({
    'available_firmware_update': False,
    'ble_auth_token': None,
    'coffee_station': None,
    'connected': True,
    'connection_date': '2025-03-21T03:00:19.892000+00:00',
    'image_url': 'https://lion.lamarzocco.io/img/thing-model/detail/lineamicra/lineamicra-1-c-bianco.png',
    'location': None,
    'model_code': 'LINEAMICRA',
    'model_name': 'LINEA MICRA',
    'name': 'MR123456',
    'offline_mode': False,
    'require_firmware_update': False,
    'serial_number': 'MR123456',
    'smart_wake_up_sleep': dict({
      'schedules': list([
        dict({
          'days': list([
            'Tuesday',
          ]),
          'enabled': True,
          'id': 'KofUy56',
          'offTimeMinutes': 514,
          'onTimeMinutes': 0,
          'steamBoiler': True,
        }),
        dict({
          'days': list([
            'Monday',
          ]),
          'enabled': False,
          'id': 'd1XUDAP',
          'offTimeMinutes': 1439,
          'onTimeMinutes': 60,
          'steamBoiler': False,
        }),
      ]),
      'smart_stand_by_after': 'PowerOn',
      'smart_stand_by_enabled': True,
      'smart_stand_by_minutes': 10,
      'smart_stand_by_minutes_max': 30,
      'smart_stand_by_minutes_min': 1,
      'smart_stand_by_minutes_step': 1,
    }),
    'smart_wake_up_sleep_supported': True,
    'type': 'CoffeeMachine',
  })
# ---
# name: test_scheduling_websocket_config
  dict({
    'auto_on_off': None,
    'auto_on_off_supported': False,
    'auto_stand_by': None,
    'auto_stand_by_supported': False,
    'commands': list([
      dict({
        'error_code': None,
        'id': '16c2df41-ca86-4995-98e6-9b892e9aaafd',
        'status': 'Success',
      }),
    ]),
    'connected': True,
    'connection_date': '2025-03-21T03:00:19.892000+00:00',
    'smart_wake_up_sleep': dict({
      'schedules': list([
        dict({
          'days': list([
            'Tuesday',
          ]),
          'enabled': True,
          'id': 'KofUy56',
          'offTimeMinutes': 514,
          'onTimeMinutes': 0,
          'steamBoiler': True,
        }),
        dict({
          'days': list([
            'Monday',
          ]),
          'enabled': False,
          'id': 'd1XUDAP',
          'offTimeMinutes': 1439,
          'onTimeMinutes': 60,
          'steamBoiler': False,
        }),
      ]),
      'smart_stand_by_after': 'PowerOn',
      'smart_stand_by_enabled': True,
      'smart_stand_by_minutes': 10,
      'smart_stand_by_minutes_max': 30,
      'smart_stand_by_minutes_min': 1,
      'smart_stand_by_minutes_step': 1,
    }),
    'smart_wake_up_sleep_supported': True,
    'weekly_supported': False,
  })
# ---
# name: test_statistic_config
  dict({
    'all_widget_codes': list([
      'LAST_COFFEE',
      'COFFEE_AND_FLUSH_TREND',
    ]),
    'available_firmware_update': False,
    'ble_auth_token': None,
    'coffee_station': None,
    'connected': True,
    'connection_date': '2025-03-21T03:00:19.892000+00:00',
    'firmwares': None,
    'image_url': 'https://lion.lamarzocco.io/img/thing-model/detail/lineamicra/lineamicra-1-c-bianco.png',
    'location': None,
    'model_code': 'LINEAMICRA',
    'model_name': 'LINEA MICRA',
    'name': 'MR123456',
    'offline_mode': False,
    'require_firmware_update': False,
    'selected_widget_codes': list([
      'COFFEE_AND_FLUSH_TREND',
      'LAST_COFFEE',
    ]),
    'selected_widgets': list([
      dict({
        'code': 'COFFEE_AND_FLUSH_TREND',
        'index': 1,
        'output': dict({
          'coffees': list([
            dict({
              'timestamp': '2025-03-14T23:00:00+00:00',
              'value': 2,
            }),
            dict({
              'timestamp': '2025-03-15T23:00:00+00:00',
              'value': 2,
            }),
            dict({
              'timestamp': '2025-03-16T23:00:00+00:00',
              'value': 2,
            }),
            dict({
              'timestamp': '2025-03-17T23:00:00+00:00',
              'value': 2,
            }),
            dict({
              'timestamp': '2025-03-18T23:00:00+00:00',
              'value': 4,
            }),
            dict({
              'timestamp': '2025-03-19T23:00:00+00:00',
              'value': 3,
            }),
            dict({
              'timestamp': '2025-03-20T23:00:00+00:00',
              'value': 1,
            }),
          ]),
          'days': 7,
          'timezone': 'Europe/Berlin',
        }),
      }),
      dict({
        'code': 'LAST_COFFEE',
        'index': 1,
        'output': dict({
          'last_coffees': list([
            dict({
              'dose_index': 'Continuous',
              'dose_mode': 'Continuous',
              'dose_value_numerator': None,
              'extraction_seconds': 30.44,
              'time': '2025-03-21T05:41:19.203000+00:00',
            }),
            dict({
              'dose_index': 'Continuous',
              'dose_mode': 'Continuous',
              'dose_value_numerator': None,
              'extraction_seconds': 10.8,
              'time': '2025-03-20T16:57:07.722000+00:00',
            }),
            dict({
              'dose_index': 'Continuous',
              'dose_mode': 'Continuous',
              'dose_value_numerator': None,
              'extraction_seconds': 12.457,
              'time': '2025-03-20T05:33:46.919000+00:00',
            }),
            dict({
              'dose_index': 'Continuous',
              'dose_mode': 'Continuous',
              'dose_value_numerator': None,
              'extraction_seconds': 23.504,
              'time': '2025-03-20T05:31:42.812000+00:00',
            }),
            dict({
              'dose_index': 'Continuous',
              'dose_mode': 'Continuous',
              'dose_value_numerator': None,
              'extraction_seconds': 16.031,
              'time': '2025-03-19T14:57:35.439000+00:00',
            }),
            dict({
              'dose_index': 'Continuous',
              'dose_mode': 'Continuous',
              'dose_value_numerator': None,
              'extraction_seconds': 27.413,
              'time': '2025-03-19T14:55:42.154000+00:00',
            }),
            dict({
              'dose_index': 'Continuous',
              'dose_mode': 'Continuous',
              'dose_value_numerator': None,
              'extraction_seconds': 14.182,
              'time': '2025-03-19T06:06:19.903000+00:00',
            }),
            dict({
              'dose_index': 'Continuous',
              'dose_mode': 'Continuous',
              'dose_value_numerator': None,
              'extraction_seconds': 23.228,
              'time': '2025-03-19T06:03:55.304000+00:00',
            }),
            dict({
              'dose_index': 'DoseA',
              'dose_mode': 'PulsesType',
              'dose_value_numerator': None,
              'extraction_seconds': 12.98,
              'time': '2025-03-18T05:51:38.548000+00:00',
            }),
            dict({
              'dose_index': 'DoseA',
              'dose_mode': 'PulsesType',
              'dose_value_numerator': None,
              'extraction_seconds': 26.99,
              'time': '2025-03-18T05:50:06.774000+00:00',
            }),
            dict({
              'dose_index': 'DoseA',
              'dose_mode': 'PulsesType',
              'dose_value_numerator': None,
              'extraction_seconds': 11.069,
              'time': '2025-03-17T05:43:39.197000+00:00',
            }),
            dict({
              'dose_index': 'DoseA',
              'dose_mode': 'PulsesType',
              'dose_value_numerator': None,
              'extraction_seconds': 35.472,
              'time': '2025-03-17T05:42:03.385000+00:00',
            }),
            dict({
              'dose_index': 'DoseA',
              'dose_mode': 'PulsesType',
              'dose_value_numerator': None,
              'extraction_seconds': 11.494,
              'time': '2025-03-16T06:23:48.119000+00:00',
            }),
            dict({
              'dose_index': 'DoseA',
              'dose_mode': 'PulsesType',
              'dose_value_numerator': None,
              'extraction_seconds': 39.915,
              'time': '2025-03-16T06:22:27.433000+00:00',
            }),
            dict({
              'dose_index': 'DoseA',
              'dose_mode': 'PulsesType',
              'dose_value_numerator': None,
              'extraction_seconds': 13.891,
              'time': '2025-03-15T05:51:30.205000+00:00',
            }),
          ]),
        }),
      }),
    ]),
    'serial_number': 'MR123456',
    'type': 'CoffeeMachine',
  })
# ---
